Добавлено конфигурирование плагина maven-surefire-plugin и добавлены зависимости для mockito-inline